<resources>
    <string name="app_name">SchoolShop</string>
    <string name="label_activity_list">商品總覽</string>
    <string name="label_activity_create">刊登商品</string>
    <string name="label_activity_detail">商品詳細</string>
    <string name="label_activity_chat">聊天</string>
    <string-array name="users">
        <item>User1</item>
        <item>User2</item>
    </string-array>
    <string name="button_login">Login</string>
    <string name="sold_out">已售出</string>
    <string name="selling">銷售中</string>
    <string name="buyer_button">購買</string>
    <string name="buying_button">購買中</string>
    <string name="seller_button_sold">賣出</string>
    <string name="seller_button_reject">拒絕</string>
    <string name="contact_seller">聯絡賣家</string>
    <string name="contact_buyer">聯絡買家</string>
</resources>
