<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/item_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="10dp"
        android:text="商品名稱："
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/price_textview"
        app:layout_constraintEnd_toStartOf="@+id/item_editText"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/item_editText"
        android:layout_width="213dp"
        android:layout_height="0dp"
        android:ems="10"
        app:layout_constraintBaseline_toBaselineOf="@+id/item_textview"
        app:layout_constraintStart_toEndOf="@+id/item_textview" />

    <TextView
        android:id="@+id/price_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="32dp"
        android:text="商品價格："
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/description_textview"
        app:layout_constraintEnd_toStartOf="@+id/price_editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_textview" />

    <TextView
        android:id="@+id/price_editText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="10"
        app:layout_constraintBaseline_toBaselineOf="@+id/price_textview"
        app:layout_constraintStart_toEndOf="@+id/price_textview" />

    <TextView
        android:id="@+id/description_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="10dp"
        android:text="商品描述："
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/description_editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_textview" />

    <TextView
        android:id="@+id/description_editText"
        android:layout_width="216dp"
        android:layout_height="159dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="top|left"
        android:maxLines="10"
        android:minLines="6"
        android:scrollbars="horizontal"
        android:singleLine="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/description_textview"
        app:layout_constraintStart_toEndOf="@+id/description_textview" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <ImageView
        android:id="@+id/photo1_imageView"
        android:layout_width="152dp"
        android:layout_height="134dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/sell_button"
        app:layout_constraintEnd_toStartOf="@+id/photo2_imageView"
        app:layout_constraintHorizontal_bias="0.966"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_editText"
        app:layout_constraintVertical_bias="0.461"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <ImageView
        android:id="@+id/photo2_imageView"
        android:layout_width="152dp"
        android:layout_height="134dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/sell_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_editText"
        app:layout_constraintVertical_bias="0.461"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <TextView
        android:id="@+id/status_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/selling"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/photo2_imageView"
        app:layout_constraintVertical_bias="0.363" />

    <Button
        android:id="@+id/buyer_button"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="Buyer"
        android:text="@string/buyer_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo2_imageView"
        app:layout_constraintVertical_bias="0.392" />

    <Button
        android:id="@+id/sell_button"
        android:layout_width="125dp"
        android:layout_height="53dp"
        android:layout_marginStart="298dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="48dp"
        android:onClick="soldOut"
        android:text="@string/seller_button_sold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_editText"
        app:layout_constraintVertical_bias="0.849" />

    <Button
        android:id="@+id/reject_button"
        android:layout_width="125dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="Reject"
        android:text="@string/seller_button_reject"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/sell_button"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/sell_button"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>